--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,12 @@
-﻿- uzimanje (dodavanje/menjanje) podataka preko HttpClient-a: primer u FrmMain.BtnTest_Click()
+﻿+ pri pokretanju programa izracunati do_rodj podatke
++ staviti screenshot u readme fajl
++ uzimanje (dodavanje/menjanje) podataka preko HttpClient-a: primer u FrmMain.BtnTest_Click()
+    - srednjoskolci: tabela u DS, forma, 1) uzimaju se osnovni podaci za sve, 2) uzima se jos podataka pojedinacno
++ dodati DGV kontroli mogucnost da vrati spisak razl. vrednosti za datu kolonu
 -! klik na dgv dugme kod zaposlenog - moze li me odvesti u chrome/edge na stranicu zap u zemlji?
--! kako bi se uzimali podaci o zap u zemlji? da li bi to moglo da bude automatski?
+- doraditi sistem prikazivanja i gasenja formi: sve forme da se pojavljuju (bez duplikata) i gase isto [Applicatio.Exit() ?]
+    (dugme Izlaz ne radi u FrmSrednjoskolci)
 - prikaz samo ne/aktivnih/svih. check box aktivni sa 3state -> spojiti ovo sa text filterom
-- Esc na txtFilter -> clear text box-a
 - cuvanje podataka: poruka o dodatim, izmenjenim, obrisanim redovima za sve tabele
 - zaposlenja zaposlenih
     - ucitavanje
