M Utils: A ShowForm(), ShowMboxYesNoCancel() M FrmMain: A FormClosing(), D ShowForm(), ChildForms M UcExitApp: simplified exit from app M FrmSrednjoskolci: RNM btnTest->btnCountUniqueValues, improved calc&display unq vals A zaposleni.png

--- a/todo.txt
+++ b/todo.txt
@@ -1,65 +1,10 @@
-﻿+ pri pokretanju programa izracunati do_rodj podatke
-+ staviti screenshot u readme fajl
-+ uzimanje (dodavanje/menjanje) podataka preko HttpClient-a: primer u FrmMain.BtnTest_Click()
-    - srednjoskolci: tabela u DS, forma, 1) uzimaju se osnovni podaci za sve, 2) uzima se jos podataka pojedinacno
-+ dodati DGV kontroli mogucnost da vrati spisak razl. vrednosti za datu kolonu
--! klik na dgv dugme kod zaposlenog - moze li me odvesti u chrome/edge na stranicu zap u zemlji?
-- doraditi sistem prikazivanja i gasenja formi: sve forme da se pojavljuju (bez duplikata) i gase isto [Applicatio.Exit() ?]
+﻿-! klik na dgv dugme kod zaposlenog - moze li me odvesti u chrome/edge na stranicu zap u zemlji?
++ UcDGV: statistika unique values u mboxu, npr desni klik na kolonu...
++ doraditi sistem prikazivanja i gasenja formi: sve forme da se pojavljuju (bez duplikata) i gase isto [Applicatio.Exit() ?]
     (dugme Izlaz ne radi u FrmSrednjoskolci)
 - prikaz samo ne/aktivnih/svih. check box aktivni sa 3state -> spojiti ovo sa text filterom
-- cuvanje podataka: poruka o dodatim, izmenjenim, obrisanim redovima za sve tabele
++ cuvanje podataka: poruka o dodatim, izmenjenim, obrisanim redovima za sve tabele
 - zaposlenja zaposlenih
     - ucitavanje
     - prikazivanje
     - cuvanje
-.
-
-[
-{
-        "id": 834092,
-        "ime": "Бојан",
-        "prezime": "Вујовић",
-        "imeJednogRoditelja": null,
-        "jmbg": "1908982710109",
-        "pol": null,
-        "trenutnoZaposlen": true,
-},
-{
-        "id": 730277,
-        "ime": "Светлана",
-        "prezime": "Мартиноски",
-        "imeJednogRoditelja": null,
-        "jmbg": "2510972445008",
-        "pol": null,
-        "devojackoPrezime": null,
-        "trenutnoZaposlen": null,
-        "zaposleniZaposlenje": [
-            {
-                "regZapZaposleniId": 730277,
-                "brojUgovoraORadu": null,
-                "datumUgovora": null,
-                "procenatRadnogVremena": null,
-                "maticnaUstanova": null,
-                "datumZaposlenOd": null,
-                "datumZaposlenDo": null,
-                "radnoMesto": null,
-                "vrstaAngazovanja": null,
-                "radnoMestoNaziv": "Наставник практичне наставе у посебним условима",
-                "ugovorJeNeaktivan": null,
-            },
-            {
-                "regZapZaposleniId": 730277,
-                "brojUgovoraORadu": null,
-                "datumUgovora": null,
-                "procenatRadnogVremena": null,
-                "maticnaUstanova": null,
-                "datumZaposlenOd": null,
-                "datumZaposlenDo": null,
-                "radnoMesto": null,
-                "vrstaAngazovanja": null,
-                "radnoMestoNaziv": "Наставник предметне наставе са одељењским старешинством у   посебним условима",
-                "ugovorJeNeaktivan": false,
-            }
-            ]
-}
-]
