M ucenici.png, zaposleni.png M FrmUcenici: M dgvcSkole, dgvcRazredi (combo->text); RNM DisplayRowCount -> DisplayPositionRowCount; A GetDuosData, A inic fokus na txtFilter M DUOS: A SkolskaGodina, D Skola D FrmOdRaz

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,1 @@
-﻿+ prikaz samo ne/aktivnih/svih. check box aktivni sa 3state -> spojiti ovo sa text filterom
-+ FrmZaposleni: chk podesavanje kopiranje teksta na klik iz dgv-a
-- preuzimanje i prikaz podataka o razredima i odeljenjima
+﻿+ preuzimanje i prikaz podataka o razredima i odeljenjima
