M WebApi: A PostJson, PostForList A UcButton: dugme sa tooltip-om RNM UcExitApp -> UcExitAppButton

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,4 @@
 ﻿+ preuzimanje i prikaz podataka o razredima i odeljenjima
+- ubrzavanje unosa ocena
+- odrediti tacan kriterijum aktivnosti zaposlenog: ima zaposlenja u SvSavi koja su aktivna?
+- zaposlenima dodati i predmete na kojima rade. ovo bi trebalo da bude pretrazivo u formi.
