--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,8 @@
-﻿+ FrmMain: A static Instance
-+ FrmMain: hide in taskbar dok je neka druga forma aktivna
-- dugmici
+﻿- dugmici
 	+ skoro svim dugmicima dodati tooltip
 	[- boje dugmica: Sacuvaj - plava, Dodaj novo - zelena, Izmeni - zuta, Obrisi - crvena, Izlaz iz app - crna]
 - ukidanje FrmSrednjoskolci i dodavanje tih podataka u FrmUcenici
-- odrediti tacan kriterijum aktivnosti zaposlenog: ima zaposlenja u SvSavi koja su aktivna?
++ odrediti tacan kriterijum aktivnosti zaposlenog: ima zaposlenja u SvSavi koja su aktivna?
 - zaposlenima dodati i predmete na kojima rade. ovo bi trebalo da bude pretrazivo u formi.
 - pravljenje tooltipova sa objasnjenjima pretraga za zaposlene i ucenike
 - napraviti nove SShotove
