--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,13 @@
-﻿- FrmUcenici: AcceptDuosData pozvati i iz GetDuosData da ne bi bilo duplog koda
+﻿- dodati slike zaposlenima: ispraviti nestajanje ikonica i zatvaranje formi
+- FrmUcenici: AcceptDuosData pozvati i iz GetDuosData da ne bi bilo duplog koda
+- FrmUcenici: chk Samo tekuci da prikazuje samo ucenike koji su upisani u tekucu
+	skolsku godinu (dodati taj podatak za ucenika)
 - dugmici
 	[- boje dugmica: Sacuvaj - plava, Dodaj novo - zelena, Izmeni - zuta, Obrisi - crvena, Izlaz iz app - crna]
 - ukidanje FrmSrednjoskolci i dodavanje tih podataka u FrmUcenici
 - zaposlenima dodati i predmete na kojima rade. ovo bi trebalo da bude pretrazivo u formi.
+- zapamtiti folder sa podacima tako da ovaj ne mora da se unosi svaki put
+	kad se instalira nova verzija programa (config.ini?)
 - pravljenje tooltipova sa objasnjenjima pretraga za zaposlene i ucenike
 - napraviti nove SShotove
 [- ubrzavanje unosa koeficijenata u douniv. obrazovanju]
