Radni staž: upisivanje i izračunavanje za 31.08 A FrmStaz M FrmZaposleni: A BtnStaz_Click() M ObracunZarada: M PoslednjiObracuni() M Ds: M Zaposleni (A StazGodine, StazMeseci), M ObracunZarada (A Staz)

--- a/JISP/Forms/FrmZaposleni.resx
+++ b/JISP/Forms/FrmZaposleni.resx
@@ -165,6 +165,15 @@
   <metadata name="dgvcStatusAktivnosti.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="dgvcStatusAktivnosti2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgvcStazGodine.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dgvcStazMeseci.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="dgvcNapomene.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
