M FrmUcenici: A kolona Ispisan M FrmZaposleni: kome fale 40cas rešenja

--- a/JISP/Forms/FrmUcenici.resx
+++ b/JISP/Forms/FrmUcenici.resx
@@ -150,6 +150,9 @@
   <metadata name="_Godine.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="dgvcIspisan.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="ZavrsObrazovanjaRezimeDgvc.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
